# rust-playground

./: .editorconfig  Cargo.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: test.yml
src/: convert.rs  eventlog.rs  main.rs  service.rs
