[package]
name = "rust-playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
fern = "0.6"

[dependencies.windows]
version = "0.28.0"
features = [
    "std",
    "alloc",
    "Win32_Foundation",
    "Win32_System_EventLog",
    "Win32_System_Services",
    "Win32_Security"
]
